--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,3 +25,54 @@ body
     margin-right: 24px
   &-link.active
     font-weight: 700
+.header
+  display: flex
+  align-items: center
+  padding: 75px 0
+  &-photo
+    max-width: 212px
+    height: auto
+  &-text 
+    margin-left: 27px
+  &-strong
+    font-weight: 700
+    font-size: 48px
+    line-height: 125%
+  &-heading 
+    max-width: 510px
+    font-weight: 700
+    font-size: 24px
+    line-height: 135%
+    letter-spacing: -0.02em
+    margin-top: 8px
+    margin-bottom: 24px
+  &-primery
+    color: #BF7506
+  &-links 
+    display: flex
+    align-items: center
+.cv
+  &-download 
+    display: flex
+    align-items: center
+    padding: 7px 8px
+    margin-left: 55px
+    text-decoration: none
+    font-weight: 700
+    font-size: 16px
+    line-height: 150%
+    color: #211B12
+    border-bottom: 2px solid #BF7506
+  &-icon 
+    margin-right: 4px
+.social
+  &-list 
+    list-style: none
+    padding: 0
+    display: flex
+    align-items: center
+  &-link 
+    display: inline-block
+    padding: 8px
+
+  
