--- a/sass/style.sass
+++ b/sass/style.sass
@@ -74,5 +74,68 @@ body
   &-link 
     display: inline-block
     padding: 8px
-
-  
+.section
+  &-heading 
+    font-weight: 700
+    font-size: 48px
+    line-height: 125%
+    letter-spacing: -0.03em
+    color: #BF7506
+.cards
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+.card
+  max-width: 400px
+  margin-bottom: 40px
+  &-title 
+    margin-top: 0
+    margin-bottom: 8px
+    font-weight: 700
+    font-size: 24px
+    line-height: 135%
+    letter-spacing: -0.02em
+    color: #BF7506
+  &-text
+    font-weight: 400
+    font-size: 16px
+    line-height: 150%
+    color: #211B12
+    &-wrapper
+      padding: 16px
+  &-buttons
+    display: flex
+    align-items: center
+  &-button 
+    display: flex
+    align-items: center
+    padding: 7px 8px
+    text-decoration: none
+    font-weight: 700
+    font-size: 16px
+    line-height: 150%
+    color: #211B12
+    border-bottom: 2px solid #BF7506
+    &-text 
+      margin-left: 4px
+  &-button:not(:last-child)
+    margin-right: 25px
+.tags
+  list-style-type: none
+  padding: 0 
+  display: flex
+  align-items: center
+  margin-top: 8px
+  margin-bottom: 16px
+.tag
+  padding: 4px 8px
+  display: inline-block
+  font-weight: 400
+  font-size: 12px
+  line-height: 150%
+  color: #211B12
+  text-decoration: none
+  border: 1px solid #DD9C3C
+  border-radius: 4px
+.tags-item:not(:last-child) 
+  margin-right: 4px
