--- a/sass/style.sass
+++ b/sass/style.sass
@@ -139,3 +139,109 @@ body
   border-radius: 4px
 .tags-item:not(:last-child) 
   margin-right: 4px
+.developer
+  display: flex
+  align-items: center
+  padding: 80px 0 20px
+  &-photo
+    width: 360px
+    height: 440px
+    flex-shrink: 0
+    object-fit: cover
+    border-radius: 20px
+  &-about 
+    margin-left: 55px
+  &-hello
+    font-weight: 400
+    font-size: 24px
+    line-height: 135%
+    letter-spacing: -0.02em
+    color: #211B12
+  &-title 
+    font-weight: 700
+    font-size: 32px
+    line-height: 125%
+    letter-spacing: -0.03em
+    color: #BF7506
+    margin-top: 4px
+    margin-bottom: 16px
+  &-text 
+    font-weight: 400
+    font-size: 16px
+    line-height: 150%
+    color: #211B12
+  &-sign 
+    max-width: 200px
+.motto
+  font-weight: 400
+  font-size: 24px
+  line-height: 150%
+  color: #DD9C3C
+.skills
+  padding: 20px 0
+  &-title 
+    font-weight: 700
+    font-size: 24px
+    line-height: 135%
+    color: #211B12
+.feedback
+  padding: 80px 0 160px
+  &-title 
+    font-weight: 700
+    font-size: 32px
+    line-height: 125%
+    color: #211B12
+.form 
+  &-container 
+    max-width: 435px
+    margin: auto
+.input
+  border: 3px solid #E0DEDC
+  border-radius: 4px
+  width: 435px
+  height: 56px
+  &-group
+    position: relative
+    padding-top: 8px
+    margin-bottom: 24px
+  &-label 
+    position: absolute
+    top: 0
+    left: 16px
+    height: 24px
+    padding: 0 8px
+    color: #83807c
+    background: #FFFFFF
+.textarea
+  min-height: 140px
+  resize: none
+.submit
+  &-button 
+    display: flex
+    align-items: center
+    padding: 7px 8px
+    margin-left: 55px
+    text-decoration: none
+    font-weight: 700
+    font-size: 16px
+    line-height: 150%
+    color: #211B12
+    border: none
+    border-bottom: 2px solid #BF7506
+    background: #fff
+    cursor: pointer
+.button
+  &-group
+    display: flex
+    justify-content: flex-end
+.footer
+  padding-top: 40px
+  padding-bottom: 16px
+  &-text 
+    display: flex
+    justify-content: center
+.citata
+  font-weight: 400
+  font-size: 16px
+  line-height: 150%
+  color: #83807C
