--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Inter', sans-serif;
 }
@@ -100,14 +104,14 @@ body {
 }
 
 .cv-download {
+  padding: 7px 8px;
+  margin-left: 55px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 7px 8px;
-  margin-left: 55px;
   text-decoration: none;
   font-weight: 700;
   font-size: 16px;
@@ -159,6 +163,10 @@ body {
 .card {
   max-width: 400px;
   margin-bottom: 40px;
+}
+
+.card-image {
+  max-width: 100%;
 }
 
 .card-title {
@@ -238,6 +246,7 @@ body {
   text-decoration: none;
   border: 1px solid #DD9C3C;
   border-radius: 4px;
+  margin-bottom: 4px;
 }
 
 .tags-item:not(:last-child) {
@@ -316,7 +325,15 @@ body {
 }
 
 .feedback {
+  position: relative;
   padding: 80px 0 160px;
+}
+
+.feedback-hand {
+  position: absolute;
+  top: 20%;
+  right: 0;
+  width: 25%;
 }
 
 .feedback-title {
@@ -334,7 +351,7 @@ body {
 .input {
   border: 3px solid #E0DEDC;
   border-radius: 4px;
-  width: 435px;
+  width: 100%;
   height: 56px;
 }
 
@@ -407,5 +424,126 @@ body {
   font-size: 16px;
   line-height: 150%;
   color: #83807C;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 760px;
+  }
+  .card {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 790px) {
+  .container {
+    max-width: 576px;
+  }
+  .header-photo {
+    max-width: 150px;
+  }
+  .header-strong {
+    font-size: 36px;
+  }
+  .header-heading {
+    font-size: 18px;
+  }
+  .cv-download {
+    margin-left: 15px;
+  }
+  .social-link {
+    padding: 0;
+  }
+  .card {
+    max-width: 45%;
+  }
+  .card-text-wrapper {
+    padding: 8px 0;
+  }
+  .developer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .developer-photo {
+    width: 100%;
+    height: 350px;
+    margin-bottom: 30px;
+  }
+  .developer-about {
+    margin-left: 0;
+    padding-left: 20px;
+  }
+  .feedback-hand {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    max-width: 90%;
+  }
+  .navbar {
+    padding-top: 40px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header {
+    padding-top: 30px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .header-photo {
+    margin-bottom: 20px;
+  }
+  .header-links {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .cards, .navbar {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .card {
+    max-width: 100%;
+  }
+  .cv-download {
+    margin-left: 0;
+  }
+  .tags {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 480px) {
+  .form-container {
+    width: 90%;
+  }
+  .section-heading {
+    font-size: 34px;
+  }
+  .nav-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .nav-item {
+    margin-bottom: 10px;
+  }
+  .nav-item:not(:last-child) {
+    margin-right: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
