--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,7 @@
 *
   box-sizing: border-box
+html
+  scroll-behavior: smooth
 body 
   font-family: 'Inter', sans-serif
 .container 
@@ -53,10 +55,10 @@ body
     align-items: center
 .cv
   &-download 
-    display: flex
-    align-items: center
     padding: 7px 8px
     margin-left: 55px
+    display: flex
+    align-items: center
     text-decoration: none
     font-weight: 700
     font-size: 16px
@@ -88,6 +90,8 @@ body
 .card
   max-width: 400px
   margin-bottom: 40px
+  &-image
+    max-width: 100%
   &-title 
     margin-top: 0
     margin-bottom: 8px
@@ -137,6 +141,7 @@ body
   text-decoration: none
   border: 1px solid #DD9C3C
   border-radius: 4px
+  margin-bottom: 4px
 .tags-item:not(:last-child) 
   margin-right: 4px
 .developer
@@ -185,7 +190,13 @@ body
     line-height: 135%
     color: #211B12
 .feedback
+  position: relative
   padding: 80px 0 160px
+  &-hand 
+    position: absolute
+    top: 20%
+    right: 0
+    width: 25%
   &-title 
     font-weight: 700
     font-size: 32px
@@ -198,7 +209,7 @@ body
 .input
   border: 3px solid #E0DEDC
   border-radius: 4px
-  width: 435px
+  width: 100%
   height: 56px
   &-group
     position: relative
@@ -245,3 +256,74 @@ body
   font-size: 16px
   line-height: 150%
   color: #83807C
+
+@media ( max-width: 1024px  )
+  .container
+    max-width: 760px
+  .card
+    max-width: 350px
+@media ( max-width: 790px  )
+  .container
+    max-width: 576px
+  .header
+    &-photo
+      max-width: 150px
+  .header
+    &-strong
+      font-size: 36px
+  .header
+    &-heading
+      font-size: 18px
+  .cv-download
+    margin-left: 15px
+  .social-link
+    padding: 0
+  .card
+    max-width: 45%
+    &-text-wrapper
+      padding: 8px 0
+  .developer
+    flex-direction: column
+    &-photo
+      width: 100%
+      height: 350px
+      margin-bottom: 30px
+    &-about 
+      margin-left: 0
+      padding-left: 20px
+  .feedback-hand
+    display: none
+@media ( max-width: 600px  )
+  .container
+    max-width: 90%
+  .navbar
+    padding-top: 40px
+    flex-direction: column
+  .header
+    padding-top: 30px
+    flex-direction: column
+    text-align: center
+    &-photo
+      margin-bottom: 20px
+    &-links
+      flex-direction: column
+  .cards, .navbar
+    flex-direction: column
+  .card
+    max-width: 100%
+  .cv-download
+    margin-left: 0
+  .tags
+    flex-wrap: wrap
+@media ( max-width: 480px  )
+  .form-container
+    width: 90%
+  .section-heading
+    font-size: 34px
+  .nav
+    &-list 
+      flex-direction: column
+    &-item 
+      margin-bottom: 10px
+    &-item:not(:last-child) 
+      margin-right: 0
